# HomeLabMediaViewer

./: Cargo.toml
examples/media/: video
src/: main.rs
src/hlmv/: browser.rs  config.rs  db.rs  fs.rs  idhandler.rs  lang.rs  mod.rs  thumb.rs
src/web/: browser.html  index.html  style.css
src/web/config/: db.splite
