[package]
name = "HomeLabMediaViewer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.24"
ini = "1.3.0"
percent-encoding = "2.3.2"
rocket = { version = "0.5.1", features = ["json"] }
rusqlite = "0.39.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.50.0", features = ["full"] }
